fix text alignement in basics section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,8 @@ body{
 }
 p {  
     font-family: Reenie Beanie, sans-serif;
-    font-size: 20px;
+    font-size: 30px;
+    margin-left: 10px;
 
 }
 /* heading and logo */
@@ -74,13 +75,23 @@ h1, h2 {
 /* basics section*/
 #basics{
     height: 600px;
+    
 }
+
+#basics > h2{
+    text-align:center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 #tools{
     float:left;
-    width:50%
+    width:50%;
+    text-align: center;
 
 }
 #stitches{
     float: right;
-    width:50%
+    width:50%;
+    text-align: center;
 }
